src/main/resources/api/examples/errors/error-example-403.raml
#%RAML 1.0 NamedExample
values:
  message: Forbidden 
  errors:  
  - #item 1
    "code": xxx-000
    "message": |
      The request was a legal request, but the server is refusing to respond to it. Unlike a 401 Unauthorized response, authenticating will make no difference.